# bookmarklets

./: .gitignore  README.md  bookmarklets.opam  dune  dune-project  elfeed-capture.js  gen.ml  index.html  save-momentum-quotes.js  styles.css  whatsapp-diff.js
scripts/: build.sh
src/: better-website.js  fitbit-csv.js  kindle-highlights.js  rudolph.js  save-momentum-quotes.js  ultimate-central-roster-save-links.js  whatsapp-diff.js  whatsapp-sum-diff.js
tests/: run.js
